[gd_scene load_steps=7 format=3 uid="uid://cxyrsu1dkmcwm"]

[ext_resource type="PackedScene" uid="uid://bv17lh6n2q5kb" path="res://trashbox/scenes/main/window_base.tscn" id="1_4n1ku"]
[ext_resource type="Script" uid="uid://c62clhokls37r" path="res://trashbox/scripts/app_chat.gd" id="2_haxvl"]
[ext_resource type="Texture2D" uid="uid://cjdg85bipgjd1" path="res://trashbox/assets/sprites/boss.png" id="3_hvvjn"]
[ext_resource type="Texture2D" uid="uid://vlm1d562dul" path="res://trashbox/assets/sprites/huajie.png" id="4_pesid"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tllig"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jcn1p"]
bg_color = Color(0.26666668, 0.26666668, 0.26666668, 1)

[node name="WindowBase" instance=ExtResource("1_4n1ku")]
script = ExtResource("2_haxvl")

[node name="CloseButton" parent="BgColor/MainLayout/TitleBar" index="1"]
text = "X"

[node name="SplitView" type="HSplitContainer" parent="BgColor/MainLayout/ContentSlot" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
split_offset = 150

[node name="LeftSidebar" type="PanelContainer" parent="BgColor/MainLayout/ContentSlot/SplitView" index="0"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tllig")

[node name="ContactList" type="VBoxContainer" parent="BgColor/MainLayout/ContentSlot/SplitView/LeftSidebar" index="0"]
layout_mode = 2

[node name="BtnBoss" type="Button" parent="BgColor/MainLayout/ContentSlot/SplitView/LeftSidebar/ContactList" index="0"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "老板"
icon = ExtResource("3_hvvjn")
flat = true
alignment = 0

[node name="BtnColleague" type="Button" parent="BgColor/MainLayout/ContentSlot/SplitView/LeftSidebar/ContactList" index="1"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "华姐"
icon = ExtResource("4_pesid")
flat = true
alignment = 0

[node name="Spacer" type="Control" parent="BgColor/MainLayout/ContentSlot/SplitView/LeftSidebar/ContactList" index="2"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightChatArea" type="PanelContainer" parent="BgColor/MainLayout/ContentSlot/SplitView" index="1"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jcn1p")

[node name="ChatLayout" type="VBoxContainer" parent="BgColor/MainLayout/ContentSlot/SplitView/RightChatArea" index="0"]
layout_mode = 2

[node name="Header" type="PanelContainer" parent="BgColor/MainLayout/ContentSlot/SplitView/RightChatArea/ChatLayout" index="0"]
layout_mode = 2

[node name="CurrentContactLabel" type="Label" parent="BgColor/MainLayout/ContentSlot/SplitView/RightChatArea/ChatLayout/Header" index="0"]
layout_mode = 2
text = "当前无会话"
horizontal_alignment = 1

[node name="ChatLog" type="RichTextLabel" parent="BgColor/MainLayout/ContentSlot/SplitView/RightChatArea/ChatLayout" index="1"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
bbcode_enabled = true

[node name="InputArea" type="HBoxContainer" parent="BgColor/MainLayout/ContentSlot/SplitView/RightChatArea/ChatLayout" index="2"]
layout_mode = 2

[node name="MessageInput" type="LineEdit" parent="BgColor/MainLayout/ContentSlot/SplitView/RightChatArea/ChatLayout/InputArea" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="BgColor/MainLayout/ContentSlot/SplitView/RightChatArea/ChatLayout/InputArea" index="1"]
layout_mode = 2
text = "发送"
